# remote_signtool_server

./: .gitignore  CMakeLists.txt  README.md  remote_sign_tool.bat
release/remote_signtool_server/static/: index.html
src/: App.cpp
